# plx

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  user-stories-brainstorm.md
.github/workflows/: ci.yml  fuzz-nightly.yml  release.yml
docs/: architecture.md
examples/: batch_mix.py  batch_mix_v2.py  inheritance_test.py
src/plx/analyze/: __init__.py  _context.py  _results.py  _rules.py  _types.py  _visitor.py
src/plx/export/: __init__.py  py.py  st.py
src/plx/export/ld/: __init__.py  _model.py  _transform.py
src/plx/export/py/: __init__.py  _expressions.py  _helpers.py  _statements.py  _writer.py
src/plx/export/st/: __init__.py  _expressions.py  _source_map.py  _statements.py  _writer.py
src/plx/framework/: __init__.py  _compilation_helpers.py  _compiler.py  _compiler_core.py  _compiler_expressions.py  _compiler_sentinels.py  _compiler_statements.py  _constants.py  _data_types.py  _decorators.py  _descriptors.py  _discover.py  _errors.py  _global_vars.py  _iec_builtins.py  _library.py  _math_rewrites.py  _plc_types.py  _project.py  _properties.py  _registry.py  _sfc.py  _task.py  _types.py  _vendor.py
src/plx/model/: __init__.py  _base.py  config.py  expressions.py  hardware.py  init_pattern.py  pou.py  project.py  sfc.py  statements.py  task.py  types.py  variables.py  walk.py
src/plx/runtime/: __init__.py  _bridge.py  _cli.py  _console.py  _engine.py  _loader.py  _opcua.py  _plant.py  _watcher.py
src/plx/simulate/: __init__.py  _builtins.py  _context.py  _executor.py  _pointers.py  _project_context.py  _proxy.py  _trace.py  _triggers.py  _values.py
src/plx/stdlib/: __init__.py
src/plx/stdlib/analog/: __init__.py  scaling.py
src/plx/stdlib/discrete/: __init__.py  debounce.py
src/plx/stdlib/motors/: __init__.py  dol.py
src/plx/stdlib/process/: __init__.py
src/plx/stdlib/safety/: __init__.py
src/plx/stdlib/valves/: __init__.py  solenoid.py
tests/: conftest.py  test_analyze.py  test_analyze_edge_cases.py  test_architecture.py  test_codegen.py  test_compiler_calls.py  test_compiler_errors.py  test_compiler_expressions.py  test_compiler_fstrings.py  test_compiler_internals.py  test_compiler_statements.py  test_critical_fixes.py  test_data_types.py  test_decorators.py  test_descriptors.py  test_discover.py  test_duplicate_name_validation.py  test_export_ld.py  test_export_st.py  test_fb_array_invocation.py  test_fb_property.py  test_fb_property_inheritance.py  test_gap_coverage.py  test_global_vars.py  test_infrastructure.py  test_inheritance.py  test_inheritance_edge_cases.py  test_init.py  test_interfaces.py  test_ir_model_fields.py  test_ir_validators.py  test_library_stubs.py  test_math_integration.py  test_math_rewrites.py  test_methods.py  test_network_comments.py  test_plc_types.py  test_pointer_reference.py  test_program_bottling.py  test_program_hvac.py  (+38 more)
tests/fixtures/sample_project/: __init__.py  tasks.py
tests/fixtures/sample_project/conveyors/: belt.py  roller.py
tests/fixtures/sample_project/io/: signals.py
tests/fuzz/: strategies.py  test_fuzz_export_st.py  test_fuzz_ir_roundtrip.py
